--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "engines": {
     "node": ">=0.10.0"
   },
-  "homepage": "https://github.com/q3boy/nnspoi",
+  "homepage": "https://github.com/q3boy/nns",
   "repository": {
     "type": "git",
-    "url": "git://github.com/q3boy/nnspoi.git"
+    "url": "git://github.com/q3boy/nns.git"
   },
   "bugs": {
-    "url": "https://github.com/q3boy/nnspoi/issues"
+    "url": "https://github.com/q3boy/nns/issues"
   },
   "dependencies": {
     "options-stream": "*",
@@ -33,6 +33,9 @@
     "jscover": "*",
     "yamljs": "*",
     "find-remove": "*"
+  },
+  "bin": {
+    "nnsbuild": "./bin/build"
   },
   "scripts": {
     "prepublish": "make release",
